openshift/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: impact-analyzer
  labels:
    app: impact-analyzer
spec:
  selector:
    app: impact-analyzer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
